--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.bbs</groupId>
 	<artifactId>blockchain</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>blockchain</name>
 	<description>Medical prescription using blockchain technology</description>
 	<properties>
