--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,12 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<version>1.11.1</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.13.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
